src/test/kalang-snippets/error/ContinueError.kl
continue outside of loop@2
void test() {
    continue;
}